2009-02-04  Aaron Faupell  <afaupell@users.sourceforge.net>

	Initial commit
